--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
       </dependency>
 
       <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-context-support</artifactId>
+          <version>2.5.6.SEC01</version>
+      </dependency>
+
+      <dependency>
           <groupId>org.freemarker</groupId>
           <artifactId>freemarker</artifactId>
           <version>2.3.19</version>
