--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,18 @@
     </properties>
 
   <dependencies>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.11</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.jvnet.mock-javamail</groupId>
+          <artifactId>mock-javamail</artifactId>
+          <version>1.9</version>
+          <scope>test</scope>
+      </dependency>
 
       <dependency>
           <groupId>org.springframework</groupId>
@@ -54,13 +66,6 @@
           <artifactId>spring-webmvc</artifactId>
           <version>${spring.version}</version>
       </dependency>
-
-      <dependency>
-          <groupId>junit</groupId>
-          <artifactId>junit</artifactId>
-          <version>4.11</version>
-      </dependency>
-
       <dependency>
           <groupId>org.springframework</groupId>
           <artifactId>spring-context-support</artifactId>
@@ -72,6 +77,13 @@
           <artifactId>freemarker</artifactId>
           <version>2.3.19</version>
       </dependency>
+      <dependency>
+          <groupId>javax.mail</groupId>
+          <artifactId>mail</artifactId>
+          <version>1.4.7</version>
+      </dependency>
+
+
 
 
 
