--- a/pom.xml
+++ b/pom.xml
@@ -77,10 +77,18 @@
           <artifactId>freemarker</artifactId>
           <version>2.3.19</version>
       </dependency>
+
       <dependency>
           <groupId>javax.mail</groupId>
           <artifactId>mail</artifactId>
           <version>1.4.7</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.mockito</groupId>
+          <artifactId>mockito-core</artifactId>
+          <version>1.9.5</version>
+          <scope>test</scope>
       </dependency>
 
 
