--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,14 @@
           <artifactId>spring-webmvc</artifactId>
           <version>${spring.version}</version>
       </dependency>
+
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-test</artifactId>
+          <scope>test</scope>
+          <version>${spring.version}</version>
+      </dependency>
+
       <dependency>
           <groupId>org.springframework</groupId>
           <artifactId>spring-context-support</artifactId>
@@ -90,13 +98,11 @@
           <version>1.9.5</version>
           <scope>test</scope>
       </dependency>
-
-
-
-
-
-
-
+      <dependency>
+          <groupId>org.apache.geronimo.specs</groupId>
+          <artifactId>geronimo-servlet_2.5_spec</artifactId>
+          <version>1.2</version>
+      </dependency>
 
 
   </dependencies>
